# idamsg

./: README.md  docker-compose.yml  main.py  msg_service.py  pyproject.toml  tests.http
core/core/: settings.py  urls.py
core/msg/: models.py  serializers.py  views.py
core/msg/services/: __init__.py  image_service.py  msg_service.py  ops_service.py
docker/django/: Dockerfile
internal/entity/: channel.py  message.py
internal/repository/: repository.py
internal/services/: msg_service.py
internal/util/: chdb.py
src/: main.py  msg_service.py
src/api/routers/: __init__.py
src/api/routers/v1/: messages.py
src/api/schemas/: messages.py
src/api_v1/routers/: __init__.py  messages.py
src/api_v1/schemas/: channels.py  image.py  messages.py  pagination.py
tests/: test_unittests.py
tests/component/: test_image.py  test_messages.py
tests/unit/: test_img_service.py  test_msg_service.py  test_ops_service.py
