[tool.poetry]
name = "ida"
version = "0.0.1"
description = "Integration and Deployment Architecture Student Project"
authors = ["Te4nick <ivan.ivantz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"
django = "^5.0.3"
djangorestframework = "^3.14.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
drf-spectacular = "^0.27.1"
django-compat = "^1.0.15"
apscheduler = "^3.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
black = "^24.2.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
