[tool.poetry]
name = "ida"
version = "0.0.1"
description = "Integration and Deployment Architecture Student Project"
authors = ["Te4nick <ivan.ivantz@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
icecream = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
coverage = "^7.4.1"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
